src/objects/TASKRAY__Project_Task__c.object
<CustomObject>
    <description>This is the primary TaskRay object for tasks.  This object may be used to manage reports, dashboards, workflows and other native Salesforce functionality.</description>
    <fields>
        <fullName>ClientOverviewLink__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp;Client_Overview__c,  TASKRAY__Project__r.Client_Overview__r.ContractNumber )</formula>
        <label>Client Overview</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Overview__c</fullName>
        <description>Client Overview related to the parent TaskRay Project</description>
        <formula>TASKRAY__Project__r.Client_Overview__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Client Overview related to the parent TaskRay Project</inlineHelpText>
        <label>Client Overview</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Success_Manager_Email__c</fullName>
        <description>If CSM is blank, then update with CI instead</description>
        <label>CI / CSM Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Client_Success_Manager__c</fullName>
        <formula>TASKRAY__Project__r.Client_Overview__r.CSM__r.FirstName &amp; &apos; &apos; &amp; TASKRAY__Project__r.Client_Overview__r.CSM__r.LastName</formula>
        <label>Client Success Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CurrentUser_Owner__c</fullName>
        <formula>IF( OwnerId = $User.Id , 1 , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CurrentUser_Owner</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DOPS_Score__c</fullName>
        <formula>IF(BEGINS(Project_Name__c, &quot;[TEMPLATE]&quot;), 0,
IF(NOT(Owner_Department__c = &quot;Data Operations&quot; || Owner:Queue.QueueName = &quot;Data Operations Unassigned&quot;), 0,
IF(ISPICKVAL( TASKRAY__List__c , &quot;Complete&quot;), 0,
IF(ISPICKVAL(TASKRAY__Priority__c ,&quot;High&quot;) , 1000,
IF(ISPICKVAL(Request_Type__c, &quot;Member Analysis&quot;), 975,
IF(ISPICKVAL(Request_Type__c, &quot;Recruitable Analysis&quot;), 950,
IF(ISBLANK(TEXT(Request_Type__c)), 50,
CASE( Request_Type__c,
&quot;Set Up sFTP&quot;, 200,
&quot;Update sFTP&quot;, 175,
&quot;Review Data Files&quot;, 150,
&quot;Review Existing Data Files&quot;, 125,
&quot;Process and Load Data Files&quot;, 100,
&quot;Backfill Tags / UIDs&quot;, 75,
&quot;Ad Hoc&quot;, 50,
0)
+ IF(TASKRAY__Deadline__c &lt; TODAY(), 600,
IF(TASKRAY__Deadline__c + 15 &lt; TODAY() , 300, 0))
+ IF( CONTAINS(TASKRAY__Project__r.Name, &quot;New Client&quot;), 125, 0)
)))))))</formula>
        <label>DOPS Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DOPS_TaskRay_Task_Formula__c</fullName>
        <description>This custom DOPS filter would shrink the number of standard filters DOPS need to just 1 to allow for additional filters to be added</description>
        <formula>Task_is_from_Wizard_Template__c = FALSE
&amp;&amp; NOT(CONTAINS(Project_Name__c, &quot;test&quot;))
&amp;&amp; NOT(CONTAINS(TASKRAY__trAccount__c,&quot;direct&quot;))
&amp;&amp; NOT(CONTAINS(Project_Name__c, &quot;template&quot;))
&amp;&amp; NOT(ISBLANK(Project_ID_Long__c))
&amp;&amp; NOT(ISPICKVAL( TASKRAY__List__c , &quot;Complete&quot;))</formula>
        <inlineHelpText>This custom DOPS filter would shrink the number of standard filters DOPS need to just 1 to allow for additional filters to be added</inlineHelpText>
        <label>DOPS TaskRay Task Formula</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Department_Request_Details__c</fullName>
        <label>Department Request Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Description_is_Blank__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Description is Blank</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enrollment_Marketing_Lead_Email__c</fullName>
        <label>Enrollment Marketing Lead Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Enrollment_Marketing_Lead__c</fullName>
        <formula>TASKRAY__Project__r.Client_Overview__r.EML__r.FirstName &amp; &apos; &apos; &amp; TASKRAY__Project__r.Client_Overview__r.EML__r.LastName</formula>
        <label>Enrollment Marketing Lead</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exclude_from_Stitching_In__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude from Stitching In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Launch_Date_Due_Date__c</fullName>
        <description>The listed Launch or Due Date for the parent TaskRay Project</description>
        <formula>TASKRAY__Project__r.TaskRayLaunchDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The listed Launch or Due Date for the parent TaskRay Project</inlineHelpText>
        <label>Launch Date / Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notify_CSM_ML__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Only for Process and Load Data Files</inlineHelpText>
        <label>Notify CIM/CSM/ML</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Original_Task_Owner__c</fullName>
        <label>Original Task Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Department__c</fullName>
        <formula>Owner:User.Department</formula>
        <label>Owner Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Project_ID__c</fullName>
        <description>Displays the 18 digit case safe ID for the Parent Project of a task</description>
        <formula>CASESAFEID( TASKRAY__Project__r.Id )</formula>
        <inlineHelpText>Displays the 18 digit case safe ID for the Parent Project of a task</inlineHelpText>
        <label>Parent Project ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_ID_Long__c</fullName>
        <description>Displays the 18 digit case safe ID for the Parent Project of a task</description>
        <formula>TASKRAY__Project__r.Project_ID_Long__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays the 18 digit case safe ID for the Parent Project of a task</inlineHelpText>
        <label>Project ID Long</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <formula>TASKRAY__Project__r.Name</formula>
        <label>Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Source_Launch_Date__c</fullName>
        <formula>TASKRAY__Project__r.TASKRAY__trTemplateSource__r.TaskRayLaunchDate__c</formula>
        <label>Project Source Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Type__c</fullName>
        <description>References the &quot;Project Type&quot; field on the related TaskRay Project record</description>
        <formula>TEXT(TASKRAY__Project__r.Project_Type__c)</formula>
        <label>Project Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <label>Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Ad Hoc</fullName>
                </value>
                <value>
                    <fullName>Backfill Tags / UIDs</fullName>
                </value>
                <value>
                    <fullName>Member Analysis</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <isActive>false</isActive>
                    <label>Other</label>
                </value>
                <value>
                    <fullName>Process and Load Data Files</fullName>
                </value>
                <value>
                    <fullName>Recruitable Analysis</fullName>
                </value>
                <value>
                    <fullName>Report Request</fullName>
                    <isActive>false</isActive>
                    <label>Report Request</label>
                </value>
                <value>
                    <fullName>Review Data Files</fullName>
                </value>
                <value>
                    <fullName>Review Existing Data Files</fullName>
                </value>
                <value>
                    <fullName>Set Up sFTP</fullName>
                </value>
                <value>
                    <fullName>Update sFTP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source_Task_from_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Populated with the TaskRay Source field, before process builder updates the field to the task on the Master template. Retains the integrity of where the task was originally cloned from.</description>
        <label>Source Task from Template</label>
        <referenceTo>TASKRAY__Project_Task__c</referenceTo>
        <relationshipLabel>TaskRay Tasks (Source Task from Template)</relationshipLabel>
        <relationshipName>TaskRay_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sprint_Number__c</fullName>
        <label>Sprint Number</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__Archived__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Archived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__Blocked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Blocked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__Deadline__c</fullName>
        <description>Used to track the date of when the task is estimated (scheduled) to be completed. This date will update accordingly to accommodate any scheduling changes.</description>
        <label>Estimated End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TASKRAY__Dependent_On__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field relates a TaskRay task to its predecessor using legacy dependencies. Please migrate to multiple dependencies.</description>
        <label>Dependent On (Legacy Dependencies)</label>
        <referenceTo>TASKRAY__Project_Task__c</referenceTo>
        <relationshipLabel>TaskRay Tasks</relationshipLabel>
        <relationshipName>TaskRay_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TASKRAY__Dependent_Update_Pending__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for dependency calculations. It marks a TaskRay task as potentially requiring an update based upon its predecessor receiving an update.</description>
        <label>Dependent Update Pending</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TASKRAY__List__c</fullName>
        <label>List</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Waiting on Dev Work</fullName>
                    <color>#CC66CC</color>
                    <label>Waiting on Dev Work</label>
                </value>
                <value>
                    <fullName>Not Started</fullName>
                    <color>#BBBBBB</color>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>On Deck</fullName>
                    <color>#33FFFF</color>
                    <label>On Deck</label>
                </value>
                <value>
                    <fullName>In Progress On Track</fullName>
                    <color>#E27001</color>
                    <label>In Progress On Track</label>
                </value>
                <value>
                    <fullName>In Progress Delayed</fullName>
                    <color>#3366FF</color>
                    <label>In Progress Delayed</label>
                </value>
                <value>
                    <fullName>QA/UAT</fullName>
                    <color>#A845DC</color>
                    <label>QA/UAT/Code Review</label>
                </value>
                <value>
                    <fullName>Complete</fullName>
                    <color>#33CC00</color>
                    <label>Complete</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TASKRAY__Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                    <color>#DDDDDD</color>
                    <label>High</label>
                </value>
                <value>
                    <fullName>Normal</fullName>
                    <color>#CC6600</color>
                    <default>true</default>
                    <label>Normal</label>
                </value>
                <value>
                    <fullName>Low</fullName>
                    <color>#3333FF</color>
                    <label>Low</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TASKRAY__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>TASKRAY__Project__c</referenceTo>
        <relationshipName>Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TASKRAY__RepeatCreated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Repeat Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__Repeat_End_Date__c</fullName>
        <label>Repeat End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TASKRAY__Repeat_Every__c</fullName>
        <label>Repeat Every</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__Repeat_Interval_Type__c</fullName>
        <label>Repeat Interval Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Does not repeat</fullName>
                    <default>true</default>
                    <label>Does not repeat</label>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TASKRAY__Repeat_Week_Days__c</fullName>
        <label>Repeat Week Days</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__SortOrder__c</fullName>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__Status__c</fullName>
        <label>Deprecated (Do Not Use)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Yet Started</fullName>
                    <default>true</default>
                    <label>Not Yet Started</label>
                </value>
                <value>
                    <fullName>Started</fullName>
                </value>
                <value>
                    <fullName>Finished</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TASKRAY__trAccountCommAccess__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to control record sharing with Community users that have license types which utilize Sharing Sets to determine record access.</description>
        <inlineHelpText>Used to grant access to Customer/External Accounts (Sharing Sets only).</inlineHelpText>
        <label>Account (Community Access)</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>TaskRay Tasks (Account (Community Access))</relationshipLabel>
        <relationshipName>TaskRay_External_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>TaskRay Tasks</relationshipLabel>
        <relationshipName>trTaskAccount</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trActualBillableHours__c</fullName>
        <label>Actual Billable Time (hrs)</label>
        <summarizedField>TASKRAY__trTaskTime__c.TASKRAY__Hours__c</summarizedField>
        <summaryFilterItems>
            <field>TASKRAY__trTaskTime__c.TASKRAY__Billable__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>TASKRAY__trTaskTime__c.TASKRAY__trUnsavedTimeEntry__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>TASKRAY__trTaskTime__c.TASKRAY__Task__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trActualBusinessDuration__c</fullName>
        <description>Used to track the number of business days that it actually took to complete the task. Calculated as the difference between the task Start Date and the task Actual Completion Date, excluding nonworking days.</description>
        <inlineHelpText>Number of business days that it took to complete the task.</inlineHelpText>
        <label>Actual Business Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trActualCompletionDate__c</fullName>
        <description>Date of when the task is completed. Works in conjunction with the Completed checkbox field.</description>
        <inlineHelpText>Date of when the task was completed.</inlineHelpText>
        <label>Actual Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trActualDuration__c</fullName>
        <description>Used to track the number of days that it actually took to complete the task. Calculated as the difference between the task Start Date and the task Actual Completion Date, including nonworking days.</description>
        <formula>IF( 
(TASKRAY__trActualCompletionDate__c - TASKRAY__trStartDate__c + 1) &gt; 0, 
TASKRAY__trActualCompletionDate__c - TASKRAY__trStartDate__c + 1, 
null 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of days that it took to complete the task (includes nonworking days).</inlineHelpText>
        <label>Actual Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trAvailableExternal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allows Sites guest users access to the task</description>
        <label>Available for External Sharing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trBusinessDuration__c</fullName>
        <description>Task duration excluding non-working days as defined by project’s Business Hours.</description>
        <label>Estimated Business Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trBusinessHrsOverride__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allow task to be scheduled for work on non-working day as defined by the project’s Business Hours.</description>
        <label>Override Project Schedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trCompletedAheadOfSchedule2__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to track whether the task was completed before its scheduled Estimated End Date.</description>
        <inlineHelpText>Indicates whether a task was completed before its scheduled Estimated End Date.</inlineHelpText>
        <label>Completed Ahead of Schedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trCompletedBehindSchedule2__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to track whether the task was completed after its scheduled Estimated End Date.</description>
        <inlineHelpText>Indicates whether a task was completed after its scheduled Estimated End Date.</inlineHelpText>
        <label>Completed Behind Schedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trCompleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trDepOffset__c</fullName>
        <label>Dependency Offset (Legacy Dependencies)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trDuration__c</fullName>
        <formula>IF( 
(TASKRAY__Deadline__c - TASKRAY__trStartDate__c + 1) &gt; 0, 
TASKRAY__Deadline__c - TASKRAY__trStartDate__c + 1, 
null 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trEstimatedHours__c</fullName>
        <label>Estimated Time (hrs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trHasScheduleConflict__c</fullName>
        <formula>TASKRAY__trLockDates__c &amp;&amp;
NOT(ISBLANK(TASKRAY__Dependent_On__c)) &amp;&amp;
TASKRAY__Deadline__c &lt;  TASKRAY__Dependent_On__r.TASKRAY__Deadline__c</formula>
        <label>Legacy Dependencies Schedule Conflict</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trHidden__c</fullName>
        <formula>IF(OR(ISBLANK(TASKRAY__trHideUntil__c),TASKRAY__trHideUntil__c&lt;=TODAY()) , false, true)</formula>
        <label>Hidden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trHideUntilOffset__c</fullName>
        <label>Hide Until (Days Before Start)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trHideUntil__c</fullName>
        <formula>IF(AND(NOT(ISBLANK(TASKRAY__trHideUntilOffset__c)),NOT(ISBLANK(TASKRAY__trStartDate__c))), TASKRAY__trStartDate__c - TASKRAY__trHideUntilOffset__c, null)</formula>
        <label>Hide Until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trInternalOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates a Task is for internal users only.  When set to true, this field restricts external access to a Task.</description>
        <inlineHelpText>Restricts external access to a Task.</inlineHelpText>
        <label>Internal Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trIsMilestone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Milestone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trLockDates__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Prevents scheduling updates.</description>
        <label>Lock Dates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trNumberOfTimesBlocked__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Used to track the number of times the task was marked as blocked.</description>
        <inlineHelpText>Tracks the number of times the task was marked as blocked.</inlineHelpText>
        <label>Number of Times Blocked</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trOpportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>TaskRay Tasks</relationshipLabel>
        <relationshipName>trTaskOpportunity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trPendingInterviewCount__c</fullName>
        <label>Pending Interview Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trPredecessorTasksIncomplete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Predecessor Tasks Incomplete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trProjectBusinessHoursId__c</fullName>
        <description>This is a TaskRay &quot;behind the scenes&quot; object that stores the Project&apos;s assigned business hours.</description>
        <formula>TASKRAY__Project__r.TASKRAY__trBusinessHours__c</formula>
        <label>Project Schedule Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trProjectSortOrder__c</fullName>
        <label>Project Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trScheduleConflict__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Schedule Conflict</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trStartDate__c</fullName>
        <description>Used to track the date of when the task is scheduled to start.</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trTaskGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Task Group</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.TASKRAY__Project__c</field>
                <operation>equals</operation>
                <valueField>TASKRAY__trTaskGroup__c.TASKRAY__Project__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>TASKRAY__trTaskGroup__c</referenceTo>
        <relationshipLabel>TaskRay Tasks</relationshipLabel>
        <relationshipName>TaskRay_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trTemplateSource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Template Source</label>
        <referenceTo>TASKRAY__Project_Task__c</referenceTo>
        <relationshipLabel>Cloned Tasks</relationshipLabel>
        <relationshipName>Template_Source</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trTimeType__c</fullName>
        <description>The default time type for this Task.</description>
        <inlineHelpText>Should time entries related to this Task be defaulted to non-billable or billable?</inlineHelpText>
        <label>Default Time Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Non-Billable</fullName>
                </value>
                <value>
                    <fullName>Billable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TASKRAY__trTime_Entry_Count__c</fullName>
        <label>Time Entry Count</label>
        <summaryFilterItems>
            <field>TASKRAY__trTaskTime__c.TASKRAY__trUnsavedTimeEntry__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>TASKRAY__trTaskTime__c.TASKRAY__Task__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trTotalTimeOnTask__c</fullName>
        <label>Actual Time (hrs)</label>
        <summarizedField>TASKRAY__trTaskTime__c.TASKRAY__Hours__c</summarizedField>
        <summaryFilterItems>
            <field>TASKRAY__trTaskTime__c.TASKRAY__trUnsavedTimeEntry__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>TASKRAY__trTaskTime__c.TASKRAY__Task__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trWasTaskEverBlocked__c</fullName>
        <description>Used to track whether a task was ever blocked.</description>
        <formula>TASKRAY__trNumberOfTimesBlocked__c &gt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates whether a task was ever blocked.</inlineHelpText>
        <label>Was Task Ever Blocked?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TaskRay_Task_Number__c</fullName>
        <displayFormat>T-{0000}</displayFormat>
        <label>TaskRay Task Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Task_Grouping_Label__c</fullName>
        <formula>TASKRAY__trTaskGroup__r.Name</formula>
        <label>Task Grouping Label</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Priority__c</fullName>
        <formula>IF(TEXT( TASKRAY__Priority__c ) = &quot;High&quot;, 1,
IF( 
 TASKRAY__Project__r.Client_Overview__r.Accessible_Covered_Lives__c &gt;= 50000, 1,
 IF( TASKRAY__Project__r.Client_Overview__r.Accessible_Covered_Lives__c &gt;= 5000, 2,
  IF( ISBLANK( TASKRAY__Project__r.Client_Overview__r.Accessible_Covered_Lives__c ), 3,
      3
  )
 )
)
+
IF( 
 TASKRAY__Project__r.TaskRayLaunchDate__c - TODAY() &lt;= 30, 1,
 IF( TASKRAY__Project__r.TaskRayLaunchDate__c - TODAY() &lt; 60, 2,
  IF( ISBLANK( TASKRAY__Project__r.TaskRayLaunchDate__c ), 3,
      3
  )
 )
)
+
IF( 
 CONTAINS( TEXT( TASKRAY__Project__r.Project_Type__c ), &quot;New Client&quot;), 1,
 IF( CONTAINS( TEXT( TASKRAY__Project__r.Project_Type__c ), &quot;Ad Hoc Request&quot;), 2,
  IF( CONTAINS( TEXT( TASKRAY__Project__r.Project_Type__c ), &quot;New Data Source&quot;), 3,
   IF( ISPICKVAL( TASKRAY__Project__r.Project_Type__c, &apos;&apos; ), 4,
      4
   )
  )
 )
)
)</formula>
        <label>Task Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Task_is_from_Wizard_Template__c</fullName>
        <formula>TASKRAY__Project__r.TASKRAY__trTemplate__c = TRUE</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Task is from Wizard Template</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Template_Source_Task_Start_Date__c</fullName>
        <formula>Source_Task_from_Template__r.TASKRAY__trStartDate__c</formula>
        <label>Template Source Task Start Date</label>
        <type>Date</type>
    </fields>
    <label>TaskRay Task</label>
    <listViews>
        <fullName>All_Data_Ops</fullName>
        <booleanFilter>1 AND 2 AND 3</booleanFilter>
        <columns>DOPS_Score__c</columns>
        <columns>TASKRAY__Priority__c</columns>
        <columns>Launch_Date_Due_Date__c</columns>
        <columns>TASKRAY__List__c</columns>
        <columns>TASKRAY__trAccount__c</columns>
        <columns>ClientOverviewLink__c</columns>
        <columns>TASKRAY__Project__c</columns>
        <columns>NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Client_Success_Manager_Email__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TASKRAY__Archived__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>rchia</value>
        </filters>
        <filters>
            <field>TASKRAY__List__c</field>
            <operation>notEqual</operation>
            <value>Complete</value>
        </filters>
        <label>Rae Ticket List</label>
        <sharedTo>
            <group>Data_Ops</group>
        </sharedTo>
    </listViews>
</CustomObject>